edit contact modal styled but not functional

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,7 +8,7 @@
     <title>ProVision</title>
   </head>
   <body>
-    <div class="flex" id="root"></div>
+    <div class="flex relative" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
